Mon Sep 30 15:38:53 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.h: Remove a duplicate definition
	of gdk_set_sm_client_id().

Mon Sep 30 15:31:57 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdisplay.c gdk/x11/gdkdisplay-x11.c 
	gdk/gdkinternals.h: Set the client ID on all
	displays. (#85713)

	* gdk/gdkdisplay.h gkd/gdkinternals.h
	 gdk/{linux-fb,win32,x11}/gdkmain-{fb,win32,x11}.c
	Privatize gdk_display_set_sm_client_id().

Mon Sep 30 14:46:49 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkbindings.c (gtk_binding_set_new): Initialize
 	->parsed field. (#94536, patch from Sebastian Ritau. Maybe 
 	fixes #87411?)
 
Mon Sep 30 14:28:58 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.[ch]: Add gtk_window_set_icon_from_file(),
	gtk_window_set_default_icon_from_file() convenience
	functions (#75178, suggestion from Havoc Pennington)

2002-09-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* gtk/gtktextbuffer.c: Add construct-only property "tag_table"
	and make use of it in gtk_text_buffer_new().  (#70227)

2002-09-30  Stanislav Brabec  <sbrabec@suse.cz>

	* gtk/gtkimcontextsimple.c: Completed ISO-8859-2 characters
	support (#93421), fixed cacute, umacron, completed dead_key+space
	convention.

Sun Sep 29 23:52:28 2002  Owen Taylor  <otaylor@redhat.com>

	* ===== Released 2.1.0 ======

	* NEWS: Updated

Sun Sep 29 20:20:26 2002  Owen Taylor  <otaylor@redhat.com>

        * gtk/gtktooltips.c (gtk_tooltips_event_handler): Disable
        tooltips for menu items with submenus .. they still
        don't really work properly. (Missed merge from
	stable)

Sun Sep 29 20:15:59 2002  Owen Taylor  <otaylor@redhat.com>

       * gtk/gtkwindow.c (gtk_window_move_resize): Clear
        initial_pos_set even if it only causes a move, not
        a resize as well. (Missed merge from stable,
	may fix #89562)

Sun Sep 29 14:22:47 2002 Manish Singh  <yosh@gimp.org>

	* contrib/gdk-pixbuf-xlib/Makefile.am demos/Makefile.am